// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Note component > renders with close button 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="text-black bg-success"
  role="alert"
>
  <div
    class="mx-auto flex min-h-[42px] items-center px-5 justify-start sm:min-h-11 sm:pl-7 sm:pr-0 sm:justify-center sm:gap-x-[20%]"
  >
    <div
      class="flex flex-col flex-wrap items-start py-4 sm:flex-row sm:items-center sm:gap-x-5 sm:gap-y-2 sm:py-5"
    >
      <div
        class="font-poppins text-heading-4 sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="mt-1 sm:mt-0 text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="flex items-center"
    >
      <button
        aria-label="Close"
        class="ml-3 mr-0 flex sm:mr-5 sm:ml-5"
        type="button"
      >
        <span
          class="material-symbols-outlined size-32 select-none"
        >
          cancel
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Note component > renders with default variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="text-black bg-success"
  role="alert"
>
  <div
    class="mx-auto flex min-h-[42px] items-center px-5 justify-start sm:min-h-11 sm:pl-7 sm:pr-0 sm:justify-center sm:gap-x-[20%]"
  >
    <div
      class="flex flex-col flex-wrap items-start py-4 sm:flex-row sm:items-center sm:gap-x-5 sm:gap-y-2 sm:py-5"
    >
      <div
        class="font-poppins text-heading-4 sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="mt-1 sm:mt-0 text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="flex items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with error variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="text-black bg-alert"
  role="alert"
>
  <div
    class="mx-auto flex min-h-[42px] items-center px-5 justify-start sm:min-h-11 sm:pl-7 sm:pr-0 sm:justify-center sm:gap-x-[20%]"
  >
    <div
      class="flex flex-col flex-wrap items-start py-4 sm:flex-row sm:items-center sm:gap-x-5 sm:gap-y-2 sm:py-5"
    >
      <div
        class="font-poppins text-heading-4 sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="mt-1 sm:mt-0 text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="flex items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with read more link 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="text-black bg-success"
  role="alert"
>
  <div
    class="mx-auto flex min-h-[42px] items-center px-5 justify-start sm:min-h-11 sm:pl-7 sm:pr-0 sm:justify-center sm:gap-x-[20%]"
  >
    <div
      class="flex flex-col flex-wrap items-start py-4 sm:flex-row sm:items-center sm:gap-x-5 sm:gap-y-2 sm:py-5"
    >
      <div
        class="font-poppins text-heading-4 sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="mt-1 sm:mt-0 text-body-sm"
      >
        Test Description
      </div>
      <a
        class="font-poppins mt-4 text-nowrap rounded-[30px] bg-white px-6 py-[10px] text-button-md hover:underline focus-visible:outline focus-visible:outline-[3px] focus-visible:outline-offset-[1.5px] focus-visible:outline-white active:bg-accent active:text-white active:no-underline"
        href="/"
        role="button"
      >
        Read more
      </a>
    </div>
    <div
      class="flex items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with success variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="text-black bg-success"
  role="alert"
>
  <div
    class="mx-auto flex min-h-[42px] items-center px-5 justify-start sm:min-h-11 sm:pl-7 sm:pr-0 sm:justify-center sm:gap-x-[20%]"
  >
    <div
      class="flex flex-col flex-wrap items-start py-4 sm:flex-row sm:items-center sm:gap-x-5 sm:gap-y-2 sm:py-5"
    >
      <div
        class="font-poppins text-heading-4 sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="mt-1 sm:mt-0 text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="flex items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with warning variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="text-black bg-warning"
  role="alert"
>
  <div
    class="mx-auto flex min-h-[42px] items-center px-5 justify-start sm:min-h-11 sm:pl-7 sm:pr-0 sm:justify-center sm:gap-x-[20%]"
  >
    <div
      class="flex flex-col flex-wrap items-start py-4 sm:flex-row sm:items-center sm:gap-x-5 sm:gap-y-2 sm:py-5"
    >
      <div
        class="font-poppins text-heading-4 sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="mt-1 sm:mt-0 text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="flex items-center"
    />
  </div>
</div>
`;
